--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,5 +1,6 @@
 {
     "plugins": ["prettier-plugin-tailwindcss"],
     "tabWidth": 4,
-    "useTabs": false
+    "useTabs": false,
+    "jsxSingleAttributePerLine": true
 }
