--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "motion": "^12.23.12",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-fast-marquee": "^1.6.5",
     "react-router-dom": "^7.7.1",
     "tailwindcss": "^4.1.11"
   },
